--- a/archive.html
+++ b/archive.html
@@ -1,26 +1,34 @@
 ---
-layout: page
-title: Archives
-permalink: /archives/
+layout: default
+title: Archive
 ---
-{% for post in site.posts  %}
-    {% capture this_year %}{{ post.date | date: "%Y" }}{% endcapture %}
-    {% capture next_year %}{{ post.previous.date | date: "%Y" }}{% endcapture %}
 
-    {% if forloop.first %}
-    <h2 id="{{ this_year }}-ref">{{this_year}}</h2>
-    <ul>
-    {% endif %}
+<div>
 
-    <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+  <h2>Archive</h2>
 
-    {% if forloop.last %}
-    </ul>
-    {% else %}
-        {% if this_year != next_year %}
-        </ul>
-        <h2 id="{{ next_year }}-ref">{{next_year}}</h2>
-        <ul>
-        {% endif %}
-    {% endif %}
-{% endfor %}
+  <section class="archive_list">
+    {% for category in site.categories %}
+
+    <div class="category-name">
+      <h2>{{ category | first }}</h2>
+    </div>
+    {% for post in category.last %}
+
+    <div class="post_title">
+      <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title}}</a>
+      <span class="date">{{ post.date | date: "%-d %b, %Y" }}</span>
+    </div>
+
+    {% endfor %}
+
+    {% endfor %}
+
+  </section>
+
+  <footer class="article-footer" mar>
+    {% include author.html %}
+  </footer>
+</div>
+
+
