--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: Home
         <h2 class="post_title"><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title}}</a></h2>
         <time class="post_date">{{ post.date | date: "%d %B %Y, %A" }}</time>
       </header>
-      <div class="post_excerpt">
+      <!-- <div class="post_excerpt">
         <p>
           {% if post.description %}
           {{ post.description}}
@@ -22,7 +22,7 @@ title: Home
           {% endif %} 
           <a class="read-more" href="{{ post.url | prepend: site.baseurl }}"> »  </a>
         </p> 
-      </div>
+      </div> -->
       <footer class="post_meta">
 
 
